--- a/petshop2/src/main/resources/templates/atendimento/cliente/lista-cliente-e-animais.html
+++ b/petshop2/src/main/resources/templates/atendimento/cliente/lista-cliente-e-animais.html
@@ -12,7 +12,7 @@
 		<div class="layout-pagina">
 		
 		<h1 class="titulo-formulario"><i class="far fa-handshake"></i>
-			Cliente: <span class="nomeDestaque text-primary" th:text="${cliente.nome}"></span>
+			Cliente: <span class="text-primary" th:text="${cliente.nome}"></span>
 		</h1>
 		
 		<div class="alert  alert-success"
@@ -55,19 +55,19 @@
 				
 			</div>
 			
-			<div class="form-row">
+			<div class="row">
 			
-				<div class="col-sm-12">
-						<p class="form-group" >
-							Endereço: <span class="text-primary" th:text="${cliente.endereco.getEndereco()}">
-							</span>
-						</p>
+				<div class="col-sm-12 dadosDestaque">
+					<div class="form-group">
+						<label>Endereço: <span class="text-primary" th:text="${cliente.endereco.getEndereco()}"></span>
+						</label>
+					</div>
 				</div>			
 				
 			</div>
 			
 			<div class="container">
-				<div class="form-row justify-content-between">
+				<div class="row justify-content-between">
 					
 					<a id="btnincluiranimal" class="btn btn-success btn-sm col-sm-2"
 						th:href="@{/clientes/animais/incluirAnimal/{id}(id=${cliente.id})}" th:title="'Incluir Animais'">
@@ -81,12 +81,10 @@
 			</div>
 				
 			<h1 class="titulo-formulario titulo-lista"><i class="fa fa-paw"></i>Animais</h1>
-			
 			<div class="form-row">
-			
 			<div class="table-responsive-sm col-sm-12">
 				<table id="tabela-animais"
-					class="table  table-sm table-striped  table-bordered  table-hover  table-condensed  js-sticky-table">
+					class="table table-sm table-striped table-bordered table-hover table-condensed js-sticky-table">
 					<thead>
 						<tr>
 							<th scope="col" class="text-center">Código</th>
@@ -120,7 +118,7 @@
 									th:onsubmit="'return confirm(\'Posso remover o animal: ' + 
 								${animal.nome} + ' da base de dados?\');'"
 									th:action="@{/clientes/animais/excluir/{id}(id=${animal.id})}">
-									<a class="btn btn-success btn-sm" href="#"
+									<a class="btn btn-success btn-sm" href="/atendimento/servicos/novo"
 										th:title="'Incluir Serviços'"> <span class="fa fa-cart-arrow-down"></span>
 									</a>
 									<a class="btn btn-primary btn-sm" th:href="@{/clientes/animais/{id}(id=${animal.id})}"
