--- a/petshop2/src/main/resources/templates/administracao/usuario/cadastro-usuario.html
+++ b/petshop2/src/main/resources/templates/administracao/usuario/cadastro-usuario.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
+	<section class="aw-layout-content js-content layout-pagina" layout:fragment="content">
 		
 			<h1 class="titulo-formulario"><i class="fas fa-user-plus"></i>Cadastro de usuário</h1>
 			
@@ -64,24 +64,24 @@
 					
 					<div class="col-sm-2">
 						<div class="form-group">
-							<label class="campo_obrigatorio" for="cpf">CPF</label>
+							<label class="campo_obrigatorio"for="cpf">CPF</label>
 							<input id="cpf" type="text"	class="form-control cpf" onblur="preencher_cpf(this)" 
 							placeholder="Ex: 000.000.000-00" th:field="*{cpf}" />
 						</div>
 					</div>
 				
 					<div class="col-sm-4 form-group" th:classappend="${#fields.hasErrors('nome')} ? has-error">
-						<label class="campo_obrigatorio" for="nome">Nome</label>
+						<label class="obrigatorio" for="nome">Nome</label>
 						<input id="nome" type="text" class="form-control" th:field="*{nome}" />
 					</div>
 					
 					<div class="col-sm-4 form-group" th:classappend="${#fields.hasErrors('email')} ? has-error">
-						<label class="campo_obrigatorio" for="email">E-mail</label>
+						<label class="obrigatorio"for="email">E-mail></label>
 						<input id="email" class="form-control" th:field="*{email}" type="text" placeholder="seunome@dominio.com.br" title="E-mail"/>
 					</div>
 					
 					<div class="col-sm-2 form-group" th:classappend="${#fields.hasErrors('permissoes')} ? has-error">
-						<label class="campo_obrigatorio" for="permissao">Permissão</label>
+						<label class="obrigatorio" for="permissao">Permissão</label>
 						
 						<select id="permissao" class="form-control" th:field="*{permissoes}">
 							<option value="">Selecione o tipo de permissão</option>
@@ -95,7 +95,7 @@
 				<div class="form-row">
 				
 					<div class="col-sm-2 form-group">
-						<label class="campo_obrigatorio" for="telefone1">Telefone principal</label>
+						<label class="obrigatorio" for="telefone1">Telefone principal</label>
 						<input id="telefone1" type="text" class="form-control fone" th:field="*{telefone1}"/>
 					</div>
 							
@@ -171,7 +171,7 @@
 				<div class="container">
 					<div class="form-row justify-content-between">
 						
-						<button class="btn  btn-primary btn-sm col-sm-2 "type="submit" title="Salvar">
+						<button class="btn btn-primary btn-sm col-sm-2" type="submit" title="Salvar">
 							<i class="far fa-save"></i> Salvar
 						</button>
 						<a id="btncancelar" class="btn btn-warning btn-sm col-sm-2"
