--- a/petshop2/src/main/resources/templates/administracao/usuario/lista-usuarios.html
+++ b/petshop2/src/main/resources/templates/administracao/usuario/lista-usuarios.html
@@ -8,7 +8,7 @@
 
 <body>
 
-	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
+	<section class="aw-layout-content js-content layout-pagina" layout:fragment="content">
 		
 			<h1 class="titulo-formulario"><i class="fas fa-list"></i>Usuários</h1>
 			
@@ -31,12 +31,10 @@
 						</div>
 				</form>
 			</div>
-			
-			<div class="form-row">
-
+				<div class="form-row">
 				<div class="table-responsive-sm col-sm-12">
 					<table id="tabela-produtos"
-						class="table  table-sm table-striped  table-bordered  table-hover  table-condensed  js-sticky-table">
+						class="table  table-sm table-striped table-bordered table-hover table-sm js-sticky-table">
 						<thead>
 							<tr>
 								<th scope="col" class="text-center">Login</th>
@@ -64,7 +62,7 @@
 											th:title="Editar"> <span class="fa fa-pencil-alt acoes"></span>
 										</a>
 										<input type="hidden" name="_method" value="DELETE" />
-										<button type="submit" class="btn btn-danger btn-sm">
+										<button type="submit" class="btn btn-danger btn-sm" th:title="Desativar">
 											<i class="far fa-trash-alt acoes"></i>
 										</button>
 									</form>
@@ -78,7 +76,7 @@
 						</tbody>
 					</table>
 				</div>
-			</div>
+				</div>
 	</section>
 </body>
 </html>
