--- a/petshop2/src/main/resources/templates/atendimento/cliente/lista-clientes.html
+++ b/petshop2/src/main/resources/templates/atendimento/cliente/lista-clientes.html
@@ -8,20 +8,25 @@
 
 <body>
 
-	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
-		
-			<h1 class="titulo-formulario"><i class="fas fa-list"></i>Clientes</h1>
-			
-			<div class="alert  alert-success"
-				th:if="${!#strings.isEmpty(mensagem)}">
-				<i class="fa fa-check-circle"></i> <span th:text="${mensagem}">Mensagem
-					sucesso!</span>
-			</div>
-			
+	<section class="aw-layout-content js-content layout-pagina"
+		layout:fragment="content">
+
+		<h1 class="titulo-formulario">
+			<i class="fas fa-list"></i>Clientes
+		</h1>
+
+		<div class="alert  alert-success"
+			th:if="${!#strings.isEmpty(mensagem)}">
+			<i class="fa fa-check-circle"></i> <span th:text="${mensagem}">Mensagem
+				sucesso!</span>
+		</div>
+		<div class="form-row col-sm-6">
 			<div class="pesquisa">
-				<form method="GET" class="form-inline" action="/atendimento/clientes" th:object="${filtro}">
-					<div class="input-group col-sm-4">
-						<input class="form-control" placeholder="Qual cliente você está procurando?"
+				<form method="GET" class="form-inline"
+					action="/atendimento/clientes/inativos" th:object="${filtro}">
+					<div class="input-group">
+						<input class="form-control"
+							placeholder="Qual cliente você está procurando?"
 							autofocus="autofocus" th:field="*{nome}"></input>
 						<div class="input-group-append">
 							<button type="submit" class="btn btn-default">
@@ -31,8 +36,9 @@
 					</div>
 				</form>
 			</div>
-
-			<div class="table-responsive-sm">
+		</div>
+		<div class="form-row">
+			<div class="table-responsive-sm col-sm-12">
 				<table id="tabela-produtos"
 					class="table  table-sm table-striped  table-bordered  table-hover  table-condensed  js-sticky-table">
 					<thead>
@@ -55,15 +61,15 @@
 									th:onsubmit="'return confirm(\'Posso inativar o cliente: ' + 
 								${cliente.nome} + ' na base de dados?\');'"
 									th:action="@{/atendimento/clientes/excluir/{id}(id=${cliente.id})}">
-									<input type="hidden" name="_method" value="DELETE" /><a class="btn btn-primary btn-sm"
+									<input type="hidden" name="_method" value="DELETE" /><a
+										class="btn btn-primary btn-sm"
 										th:href="@{/atendimento/clientes/editar/{id}(id=${cliente.id})}"
 										th:title="Editar"> <span class="fa fa-pencil-alt"></span>
-									</a>
-									<a	class="btn btn-success btn-sm"
+									</a> <a class="btn btn-success btn-sm"
 										th:href="@{/atendimento/clientes/selecao/{id}(id=${cliente.id})}"
 										th:title="Animais"> <span class="fa fa-paw"></span>
 									</a>
-									
+
 									<button type="submit" class="btn btn-danger btn-sm"
 										title="Inativar">
 										<i class="far fa-trash-alt acoes"></i>
@@ -73,13 +79,14 @@
 						</tr>
 
 						<tr>
-							<td colspan="6" th:if="${clientes.empty}">Nenhum cliente
+							<td colspan="5" th:if="${clientes.empty}">Nenhum cliente
 								cadastrado!!</td>
 						</tr>
 
 					</tbody>
 				</table>
 			</div>
+		</div>
 	</section>
 </body>
 </html>
